--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     <header>
         <div class="container header-main">
             <div class="logo">
-                <img src="foto/logosekolah.jpeg" alt="Logo">
+                <img src="logosekolah.jpeg" alt="Logo">
                 <div class="logo-text">
                     <h1>MA HARAMAIN 03</h1>
                     <p>KOTA BEKASI</p>
@@ -384,21 +384,21 @@
 
             <div class="grid-3">
                 <div class="card">
-                    <img src="foto/gedung-sekolah.jpg" alt="Akademik">
+                    <img src="gedung-sekolah.jpg" alt="Akademik">
                     <div class="card-body">
                         <h4>Kurikulum Merdeka</h4>
                         <p>Penerapan kurikulum terbaru yang berpusat pada siswa dan pengembangan karakter.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="foto/masjid.jpeg" alt="Tahfidz">
+                    <img src="masjid.jpeg" alt="Tahfidz">
                     <div class="card-body">
                         <h4>Program Tahfidz</h4>
                         <p>Wajib hafalan Juz 30 dan target hafalan 3 Juz untuk lulusan unggulan.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="foto/banjari.jpeg" alt="Ekstra">
+                    <img src="banjari.jpeg" alt="Ekstra">
                     <div class="card-body">
                         <h4>Ekstrakurikuler</h4>
                         <p>Pramuka, Silat, Marawis, Basket, dan Futsal untuk menyalurkan bakat siswa.</p>
@@ -1314,4 +1314,5 @@
         }
     </script>
 </body>
+
 </html>
